--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@faker-js/faker": "^8.3.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "5.7.0",
     "prisma": "^5.7.0",
