--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,9 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
     "@prisma/client": "5.7.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/passport-jwt": "^3.0.13",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "passport": "^0.7.0",
