--- a/backend/package.json
+++ b/backend/package.json
@@ -34,11 +34,14 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.41.0",
+    "express-list-routes": "^1.1.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "streamifier": "^0.1.1",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
@@ -47,6 +50,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.4",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
