--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
+    "@nestjs/throttler": "^5.1.1",
     "@prisma/client": "5.7.1",
     "@types/bcrypt": "^5.0.2",
     "@types/passport-jwt": "^3.0.13",
@@ -36,13 +37,16 @@
     "class-validator": "^0.14.0",
     "cloudinary": "^1.41.0",
     "express-list-routes": "^1.1.9",
+    "morgan": "^1.10.0",
+    "nestjs-prisma": "^0.22.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "streamifier": "^0.1.1",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
