--- a/backend/package.json
+++ b/backend/package.json
@@ -31,12 +31,14 @@
     "@nestjs/throttler": "^5.1.1",
     "@prisma/client": "5.7.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/fs-extra": "^11.0.4",
     "@types/passport-jwt": "^3.0.13",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.41.0",
     "express-list-routes": "^1.1.9",
+    "fs-extra": "^11.2.0",
     "morgan": "^1.10.0",
     "nestjs-prisma": "^0.22.0",
     "passport": "^0.7.0",
